back/kubernetes/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nomat-back-deployment
  labels:
    app: spring
spec:
  selector:
    matchLabels:
      app: nomat-back
  template:
    metadata:
      labels:
        app: nomat-back
    spec:
      containers:
        - name: nomat-back
          image: junroot0909/nomat:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
