back/kubernetes/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: nomat-back
  type: NodePort
