back/kubernetes/back-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "33364"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
  name: back-alb-ingress
spec:
  ingressClassName: alb
  rules:
    - host: "*.nomat.live"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-service
                port:
                  number: 8080
